# rules_verilator

./: MODULE.bazel
verilator/: defs.bzl  extensions.bzl
